# CTA

./: .gitignore  README.md  pyproject.toml
configs/: crypto_binance_spot_1d.yaml  example.yaml
docs/: example_workflow.md
src/cta_research/: __init__.py  analysis.py  backtest.py  cli.py  config.py  data.py  downloaders.py  factor_mining.py  factor_research.py  factors.py  ml.py  onchain.py  portfolio.py  qlib.py  reporting.py  risk.py  strategies.py  validation.py
tests/: test_backtest_analysis.py  test_cli_integration.py  test_config.py  test_data.py  test_downloaders.py  test_factor_mining.py  test_factor_research.py  test_factors.py  test_ml.py  test_onchain.py  test_portfolio_risk.py  test_qlib.py  test_strategies.py  test_validation.py
tests/fixtures/ohlcv/: BTCUSDT.csv  ETHUSDT.csv
