[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cta-research"
version = "0.1.0"
description = "Research-only composite CTA backtest framework"
requires-python = ">=3.11"
dependencies = [
  "ccxt>=4.5",
  "jinja2>=3.1",
  "matplotlib>=3.8",
  "numpy>=1.26",
  "pandas>=2.2",
  "pyyaml>=6.0",
  "scipy>=1.12",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
cta-research = "cta_research.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
